added skeleton of directory node

--- a/code/onion/conf/chainnode.properties
+++ b/code/onion/conf/chainnode.properties
@@ -1,6 +1,6 @@
 #properties for the chainnode
 
-#where to find the dictionary node
-dictionarynode.hostname=http://localhost
-dictionarynode.baseUrl=${dictionarynode.hostname}:10900/dict
+#where to find the directory node
+directorynode.hostname=http://localhost
+directorynode.baseUrl=${directorynode.hostname}:10900/dict
 
