--- a/code/onion/onion-common/pom.xml
+++ b/code/onion/onion-common/pom.xml
@@ -23,7 +23,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>com.github.aic2014</groupId>
-  <artifactId>onion-dictionarynode</artifactId>
+  <artifactId>onion-common</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
