--- a/code/onion/onion-directorynode/pom.xml
+++ b/code/onion/onion-directorynode/pom.xml
@@ -23,7 +23,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>com.github.aic2014</groupId>
-  <artifactId>onion-quoteserver</artifactId>
+  <artifactId>onion-directorynode</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -33,6 +33,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.github.aic2014</groupId>
+      <artifactId>onion-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
@@ -41,5 +46,4 @@
       <artifactId>spring-webmvc</artifactId>
     </dependency>
   </dependencies>
-
 </project>
