Added chain node skeleton

--- a/code/onion/conf/chainnode.properties
+++ b/code/onion/conf/chainnode.properties
@@ -4,3 +4,5 @@
 directorynode.hostname=http://localhost
 directorynode.baseUrl=${directorynode.hostname}:10900/dict
 
+#server config
+server.port=20142
