--- a/code/onion/onion-chainnode/pom.xml
+++ b/code/onion/onion-chainnode/pom.xml
@@ -16,6 +16,18 @@
   </properties>
 
   <dependencies>
-
+    <dependency>
+      <groupId>com.github.aic2014</groupId>
+      <artifactId>onion-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+    </dependency>
   </dependencies>
 </project>
