--- a/code/onion/conf/chainnode.properties
+++ b/code/onion/conf/chainnode.properties
@@ -5,4 +5,6 @@ directorynode.hostname=http://localhost
 directorynode.baseUrl=${directorynode.hostname}:10900/dict
 
 #server config
-server.port=20142
+# use =0 to use a free random port
+# server.port=20142
+server.port=0
