added registration of chainnode upon startup

--- a/code/onion/conf/chainnode.properties
+++ b/code/onion/conf/chainnode.properties
@@ -2,7 +2,7 @@
 
 #where to find the directory node
 directorynode.hostname=http://localhost
-directorynode.baseUrl=${directorynode.hostname}:20141/dict
+directorynode.baseUri=${directorynode.hostname}:20141
 
 #server config
 # use =0 to use a free random port
