--- a/code/onion/onion-common/pom.xml
+++ b/code/onion/onion-common/pom.xml
@@ -32,6 +32,14 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+    </dependency>
 
   </dependencies>
 </project>
