--- a/code/onion/onion-directorynode/pom.xml
+++ b/code/onion/onion-directorynode/pom.xml
@@ -45,5 +45,9 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+    </dependency>
   </dependencies>
 </project>
