--- a/code/onion/pom.xml
+++ b/code/onion/pom.xml
@@ -47,13 +47,25 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
-        <version>4.0.2.RELEASE</version>
+        <version>4.1.1.RELEASE</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-core</artifactId>
-        <version>4.0.2.RELEASE</version>
+        <version>4.1.1.RELEASE</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>4.1.1.RELEASE</version>
+      </dependency>
+      <!-- Jackson JSON Mapper -->
+      <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+        <version>1.9.13</version>
+      </dependency>
+
 
       <dependency>
         <groupId>junit</groupId>
