added dependencies for aws-sdk + new property-keys for aws credentials

--- a/code/onion/conf/directorynode.properties
+++ b/code/onion/conf/directorynode.properties
@@ -1,2 +1,7 @@
 #server config
 server.port=20141
+
+#AWS properties. See email from AIC assistant to fill in credentials.
+#DO NOT CHECKIN credentials!
+aws.accesskeyid=
+aws.secretaccesskey=
