forgot adding file

--- a/code/onion/conf/directorynode.properties
+++ b/code/onion/conf/directorynode.properties
@@ -2,6 +2,6 @@
 server.port=20141
 
 #AWS properties. See email from AIC assistant to fill in credentials.
-#DO NOT CHECKIN credentials!
+#Do not checkin credentials!
 aws.accesskeyid=
 aws.secretaccesskey=
