sending of message implemented
addresses #19, not done yet.
messages go one way, but the response is not routed yet.

--- a/code/onion/onion-chainnode/pom.xml
+++ b/code/onion/onion-chainnode/pom.xml
@@ -22,6 +22,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.github.aic2014</groupId>
+      <artifactId>onion-crypto</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
