--- a/code/onion/onion-crypto/pom.xml
+++ b/code/onion/onion-crypto/pom.xml
@@ -32,6 +32,10 @@
   </properties>
 
   <dependencies>
-
+      <dependency>
+          <groupId>com.github.aic2014</groupId>
+          <artifactId>onion-common</artifactId>
+          <version>${project.version}</version>
+      </dependency>
   </dependencies>
 </project>
