--- a/code/onion/onion-quoteserver/pom.xml
+++ b/code/onion/onion-quoteserver/pom.xml
@@ -40,6 +40,11 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.7.2</version>
+    </dependency>
   </dependencies>
 
 </project>
