--- a/code/onion/conf/client.properties
+++ b/code/onion/conf/client.properties
@@ -3,3 +3,8 @@
 #where to find the directory node
 directorynode.hostname=http://localhost
 directorynode.baseUri=${directorynode.hostname}:20141
+
+#server config (the originator runs a webserver to receive response messages)
+# use =0 to use a free random port
+# server.port=20143
+server.port=0
