BouncyCastle crypto provider

--- a/code/onion/onion-crypto/pom.xml
+++ b/code/onion/onion-crypto/pom.xml
@@ -37,5 +37,11 @@
           <artifactId>onion-common</artifactId>
           <version>${project.version}</version>
       </dependency>
+      <!-- BouncyCastle crypto provider -->
+      <dependency>
+          <groupId>org.bouncycastle</groupId>
+          <artifactId>bcprov-jdk15on</artifactId>
+          <version>1.51</version>
+      </dependency>
   </dependencies>
 </project>
