--- a/code/onion/conf/quoteserver.properties
+++ b/code/onion/conf/quoteserver.properties
@@ -1,7 +1,7 @@
 #config for the quoteserver
 
 #where to find the quotes file
-quotesfile=quotes.txt
+quotesUrl=blackhol.txt
 
 #server config
 server.port=20140
