--- a/code/onion/onion-crypto/pom.xml
+++ b/code/onion/onion-crypto/pom.xml
@@ -43,5 +43,9 @@
           <artifactId>bcprov-jdk15on</artifactId>
           <version>1.51</version>
       </dependency>
+      <dependency>
+          <groupId>org.codehaus.jackson</groupId>
+          <artifactId>jackson-mapper-asl</artifactId>
+      </dependency>
   </dependencies>
 </project>
