new aws properties for the directory node

--- a/code/onion/conf/directorynode.properties
+++ b/code/onion/conf/directorynode.properties
@@ -5,3 +5,12 @@ server.port=20141
 #Do not checkin credentials!
 aws.accesskeyid=
 aws.secretaccesskey=
+aws.region=eu-central-1
+aws.chainnode.defaultami=ami-b43503a9
+aws.chainnode.type=t2.micro
+aws.chainnode.prefix=G6-T3-chainnode-
+aws.chainnode.keyname=G6-T3-id
+aws.chainnode.securitygroup=
+aws.chainnode.subnet=
+aws.chainnode.quantity=6
+aws.chainnode.minQuantity=3
