enabled creation of allinone-jars runnable from the command line
closes #15

--- a/code/onion/onion-chainnode/pom.xml
+++ b/code/onion/onion-chainnode/pom.xml
@@ -13,6 +13,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <startClass>com.github.aic2014.onion.chainnode.ChainNodeApp</startClass>
   </properties>
 
   <dependencies>
@@ -35,4 +36,25 @@
       <artifactId>spring-webmvc</artifactId>
     </dependency>
   </dependencies>
+  <build>
+      <plugins>
+          <plugin>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-maven-plugin</artifactId>
+              <configuration>
+                  <mainClass>${startClass}</mainClass>
+                  <layout>JAR</layout>
+                  <classifier>allinone</classifier>
+              </configuration>
+              <executions>
+                  <execution>
+                      <goals>
+                          <goal>repackage</goal>
+                      </goals>
+                  </execution>
+              </executions>
+          </plugin>
+      </plugins>
+  </build>
+
 </project>
