--- a/code/onion/onion-quoteserver/pom.xml
+++ b/code/onion/onion-quoteserver/pom.xml
@@ -29,8 +29,28 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <startClass>com.github.aic2014.onion.quoteserver.QuoteServerApp</startClass>
   </properties>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>${startClass}</mainClass>
+                    <layout>JAR</layout>
+                    <classifier>allinone</classifier>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
