--- a/code/onion/onion-chainnode/pom.xml
+++ b/code/onion/onion-chainnode/pom.xml
@@ -35,6 +35,14 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpcore</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+      </dependency>
   </dependencies>
   <build>
       <plugins>
