end-to-end http request done
 closes #20

--- a/code/onion/conf/client.properties
+++ b/code/onion/conf/client.properties
@@ -4,6 +4,11 @@
 directorynode.hostname=http://localhost
 directorynode.baseUri=${directorynode.hostname}:20141
 
+#where to find the quote server
+quoteserver.quoteserver.hostnamePort=localhost:20140
+quoteserver.baseUri=http://${quoteserver.hostnamePort}
+
+
 #server config (the originator runs a webserver to receive response messages)
 # use =0 to use a free random port
 # server.port=20143
