refactored so that http requests are kept open until the result is available
This simplifies the design a lot.
Advantages:
* the chain node only needs one method ('/request')
* the chain node doesn't need to remember information per chain for routing messages back where they came from
* the originator doesn't need a webserver
* the originator doesn't need to remember information per chain for matching responses to prior requests
* we get an automatic request timeout for free
* errors can in every case be routed back to the originator
* we can run the originator outside of amazon AWS
Disadvantages:
* someone may say the system is less scalable as we allocate resources to the delayed requests. However, we would have to manage that information in our own code instead of letting the server do it. Not a real downside
* can't think of any more

--- a/code/onion/conf/chainnode.properties
+++ b/code/onion/conf/chainnode.properties
@@ -8,3 +8,6 @@ directorynode.baseUri=${directorynode.hostname}:20141
 # use =0 to use a free random port
 # server.port=20142
 server.port=0
+
+#timeout in milliseconds after which a chainnode will abort the routing of a message
+messageTimeout=10000
