--- a/code/onion/conf/chainnode.properties
+++ b/code/onion/conf/chainnode.properties
@@ -11,3 +11,7 @@ server.port=0
 
 #timeout in milliseconds after which a chainnode will abort the routing of a message
 messageTimeout=10000
+#timeout in millieseconds: abort if no connection established after timeout
+outgoingRequest.connectTimeout=10000
+#timeout in millieseconds: abort if no data received in connection timeout
+outgoingRequest.socketTimeout=10000
