--- a/code/onion/conf/client.properties
+++ b/code/onion/conf/client.properties
@@ -5,7 +5,7 @@ directorynode.hostname=http://localhost
 directorynode.baseUri=${directorynode.hostname}:20141
 
 #where to find the quote server
-quoteserver.quoteserver.hostnamePort=localhost:20140
+quoteserver.hostnamePort=localhost:20140
 quoteserver.baseUri=http://${quoteserver.hostnamePort}
 
 
