improved chainnode-setup-script; refactoring AWS-Code (de-coupling); AWSInstaller

--- a/code/onion/conf/directorynode.properties
+++ b/code/onion/conf/directorynode.properties
@@ -14,3 +14,4 @@ aws.chainnode.securitygroup=
 aws.chainnode.subnet=
 aws.chainnode.quantity=6
 aws.chainnode.minQuantity=3
+aws.chainnode.setupCommand=scp -oStrictHostKeyChecking=no -i 'deployment/G6-T3-id_rsa.pem' -r deployment/chainnode onion@%s:~/chainnode
