--- a/code/onion/conf/directorynode.properties
+++ b/code/onion/conf/directorynode.properties
@@ -14,4 +14,6 @@ aws.chainnode.securitygroup=
 aws.chainnode.subnet=
 aws.chainnode.quantity=6
 aws.chainnode.minQuantity=3
-aws.chainnode.setupCommand=scp -oStrictHostKeyChecking=no -i 'deployment/G6-T3-id_rsa.pem' -r deployment/chainnode onion@%s:~/chainnode
+aws.chainnode.setupCommand=scp -oStrictHostKeyChecking=no -i '%s' -r %s onion@%s:~/chainnode
+aws.chainnode.setupIDfile=D:/your/path/to/id-file.pem
+aws.chainnode.setupSource=../deployment/chainnode
