Added onion-webcommon module for webapp resources

--- a/code/onion/pom.xml
+++ b/code/onion/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>onion-common</module>
+        <module>onion-webcommon</module>
         <module>onion-chainnode</module>
         <module>onion-client</module>
         <module>onion-crypto</module>
