--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ## local config with passwords etc
 code/onion/conf.local/
 code/onion/deployment/chainnode/
+code/onion/deployment/directorynode/
 
 ## latex stuff
 *.aux
