improving logging (file-appender), fixes in aws-instance-setup-script

--- a/code/onion/conf/directorynode.properties
+++ b/code/onion/conf/directorynode.properties
@@ -1,6 +1,9 @@
 #server config
 server.port=20141
 
+aws.enableautosetup=true
+aws.terminateExisting=false
+
 #AWS properties. See email from AIC assistant to fill in credentials.
 #Do not checkin credentials!
 aws.accesskeyid=
@@ -14,6 +17,7 @@ aws.chainnode.securitygroup=
 aws.chainnode.subnet=
 aws.chainnode.quantity=6
 aws.chainnode.minQuantity=3
-aws.chainnode.setupCommand=scp -oStrictHostKeyChecking=no -i '%s' -r %s onion@%s:~/chainnode
-aws.chainnode.setupIDfile=D:/your/path/to/id-file.pem
-aws.chainnode.setupSource=../deployment/chainnode
+
+# deployment command which deploys+runs the chainnode application.
+# The %s parameter at the end has to be dynamically replaced by the corresponding chainnode-public-IP
+aws.chainnode.deploymentCommand=sh ../deployment/chainnode-deployment.sh %s
