--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 code/onion/conf.local/
 code/onion/deployment/chainnode/
 code/onion/deployment/directorynode/
+code/onion/deployment/quoteserver/
 
 ## latex stuff
 *.aux
