--- a/code/onion/conf/directorynode.properties
+++ b/code/onion/conf/directorynode.properties
@@ -8,8 +8,8 @@ aws.terminateExisting=false
 #Do not checkin credentials!
 aws.accesskeyid=
 aws.secretaccesskey=
-aws.region=eu-central-1
-aws.chainnode.defaultami=ami-b4f5c4a9
+aws.region=us-west-1
+aws.chainnode.defaultami=ami-eb1003ae
 aws.chainnode.type=t2.micro
 aws.chainnode.prefix=G6-T3-chainnode-
 aws.chainnode.keyname=G6-T3-id
@@ -20,4 +20,4 @@ aws.chainnode.minQuantity=3
 
 # deployment command which deploys+runs the chainnode application.
 # The %s parameter at the end has to be dynamically replaced by the corresponding chainnode-public-IP
-aws.chainnode.deploymentCommand=sh ../deployment/chainnode-deployment.sh %s
+aws.chainnode.deploymentCommand=sh /home/onion/directorynode/deployment/chainnode-deployment.sh %s
