--- a/code/onion/onion-quoteserver/pom.xml
+++ b/code/onion/onion-quoteserver/pom.xml
@@ -53,6 +53,11 @@
     </build>
   <dependencies>
     <dependency>
+     <groupId>com.github.aic2014</groupId>
+     <artifactId>onion-webcommon</artifactId>
+     <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
