default value for local (offline) mode

--- a/code/onion/conf/directorynode.properties
+++ b/code/onion/conf/directorynode.properties
@@ -1,7 +1,7 @@
 #server config
 server.port=20141
 
-aws.enableautosetup=true
+aws.enableautosetup=false
 aws.terminateExisting=false
 
 #AWS properties. See email from AIC assistant to fill in credentials.
