--- a/code/onion/onion-client/pom.xml
+++ b/code/onion/onion-client/pom.xml
@@ -37,6 +37,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.1.8.RELEASE</version>
                 <configuration>
                     <mainClass>${startClass}</mainClass>
                     <layout>JAR</layout>
