--- a/code/onion/conf/directorynode.properties
+++ b/code/onion/conf/directorynode.properties
@@ -21,3 +21,5 @@ aws.chainnode.minQuantity=3
 # deployment command which deploys+runs the chainnode application.
 # The %s parameter at the end has to be dynamically replaced by the corresponding chainnode-public-IP
 aws.chainnode.deploymentCommand=sh /home/onion/directorynode/deployment/chainnode-deployment.sh %s
+aws.chainnode.startChainCommand=sh /home/onion/directorynode/deployment/code/startChainNode.sh %s
+aws.chainnode.deploymentConfPath=C:/deploy/conf.local/chainnode.properties
