--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #application specific
 ## local config with passwords etc
 code/onion/conf.local/
+code/onion/deployment/*.jar
 code/onion/deployment/chainnode/
 code/onion/deployment/directorynode/
 code/onion/deployment/quoteserver/
