updated property files for a number of server threads that works fine

--- a/code/onion/conf/chainnode.properties
+++ b/code/onion/conf/chainnode.properties
@@ -9,6 +9,10 @@ directorynode.baseUri=${directorynode.hostname}:20141
 server.port=20142
 # server.port=0
 
+# it's vital to limit the tomcat threads so there are few
+# compared to the number of threads available in the chainnode's TaskExecutor
+server.tomcat.max-threads=5
+
 #timeout in milliseconds after which a chainnode will abort the routing of a message
 messageTimeout=5000
 #timeout in millieseconds: abort if no connection established after timeout
