--- a/code/onion/conf/quoteserver.properties
+++ b/code/onion/conf/quoteserver.properties
@@ -5,3 +5,8 @@ quotesFilename=quotes.txt
 
 #server config
 server.port=20140
+
+#here, we want many threads to avoid blocking the whole
+#chain at the exit
+server.tomcat.max_threads=25
+
