fixed problem with using external ip when running on localhost

--- a/code/onion/conf/chainnode.properties
+++ b/code/onion/conf/chainnode.properties
@@ -13,6 +13,12 @@ server.port=0
 # compared to the number of threads available in the chainnode's TaskExecutor
 server.tomcat.max-threads=5
 
+# switch detection mode for own ip address
+# true: check via http://checkip.amazonaws.com
+# false: use InetAddress.getLocalHost().getHostAddress();
+# if not on a publicly reachable host, use 'false' here.
+detectLocalIp.viaAmazonAWS = false
+
 #timeout in milliseconds after which a chainnode will abort the routing of a message
 messageTimeout=5000
 #timeout in millieseconds: abort if no connection established after timeout
