some cleanup in AWSDirectoryNodeService.java

--- a/code/onion/conf/directorynode.properties
+++ b/code/onion/conf/directorynode.properties
@@ -23,3 +23,6 @@ aws.chainnode.minQuantity=3
 aws.chainnode.deploymentCommand=sh /home/onion/directorynode/deployment/chainnode-deployment.sh %s
 aws.chainnode.deploymentConfPath=C:/deploy/conf.local/chainnode.properties
 aws.chainnode.port=20142
+
+lifecheck.readTimeout=5000
+lifecheck.connectTimeout=5000
